 . CocosLive: supports "update score" (issue #250)
 . Demos: added performance test (issue #243)
 . Director: FastDirector doesn't leak autoreleased objects (issue #221)
 . Director: prevents calling startAnimation twice in a row (issue #215)
 . Menu: can be aligned in columns / rows. Updated menu example (issue #206)
 . Menu: MenuItem supports LabelAtlas (issue #235)
 . Scheduler: if signature is not correct Assert (issue #218)
 . Sprite: correct transform anchor point (issue #216)
 . TextureAtlas: support for texture2D (issue #161)

version 0.7.0 - 19-Feb-2009
 . Action: elapsed is a property (issue #203)
 . Actions: EaseIn/Out added. Cubic/Quad removed (issue #195)
 . Atlas: Fixed black line (issue #135 and issue #47)
 . Atlas: Works when GL_CULL_FACE is enabled (issue #179)
 . Atlas: updateAltasValues renamed to updateAtlasValues (issue #198)
 . CocosLive: added client and example that uses the CocosLive service (issue #175)
 . CocosNode: children is a property (issue #185)
 . CocosNode: rotate before scale (issue #217)
 . Demos: Creating Window and attaching cocos2d to it (issue #180)
 . Demos: Texture2dDemo shows how to load PVR images and PVR Mipmap images (issue #112)
 . Demos: Added AttachDemo (issue #180)
 . Demos: Added EffectsDemo and EffectsAdvancedDemo (issue #183)
 . Director: OpenGLview is attached to a given UIView/UIWindow (issue #180)
 . Director: winSize returns a CGSize (not a CGRect) (issue #159)
 . Director: added FastDirector (issue #145)
 . Director: dispatch missing events in main loop (issue #146)
 . Director: renamed runScene with runWithScene (issue #194)
 . Director: SignificantTimeChange fixed (issue #6)
 . Effects: Added Effects support (Grid and TiledGrid) (issue #183)
 . Effects: Basic: StopGrid, ReuseGrid (issue #183)
 . Effects: Grid: Waves3D, FlipX3D, FlipY3D, Lens3D, Ripple3D, Liquid, Shaky3D, Waves
            Twirl (issue #183)
 . Effects: Tiled: ShakyTiles3D, ShatteredTiles3D, ShuffleTiles, FadeOutTRTiles, FadeOutBLTiles,